src/test/deca/context/invalid/operations/bool/invalid_bool_op_lt_str.deca
// Description:
//    test invalid LT between int and string
//
// [Begin Result]
//invalid_bool_op_lt_str.deca:12:18: Unsupported operation '<' between types int and string. Operation '<' supported only between integer(s) and(or) float(s). (Rule 3.33)
// [End Result]
//
// Historique:
//    cree le 02/01/2025

{
    boolean a = 1 < "2";
}